--- a/PPl3/Areas/User/Views/HomeUser/editProfile.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/editProfile.cshtml
@@ -155,7 +155,7 @@
                                 <li class=""><button>Notifications</button></li>
                                 <li class=""><a href="/user/homeuser/trip">Trip</a></li>
                                 <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
-                                <li><a href="Content">Manage listings</a></li>
+                                <li><a href="/host/homehost/listing">Manage listings</a></li>
                                 <li><a href="/user/homeuser/profile">Account</a></li>
                                 <li><a href="#">Gift Cards</a></li>
                                 <li><a href="#">Help Center</a></li>
