--- a/PPl3/Areas/User/Views/HomeUser/Index.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Index.cshtml
@@ -38,7 +38,7 @@
             <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
             <li><a href="Content">Manage listings</a></li>
             <li><a href="/user/homeuser/profile?id=@p_user.id">Account</a></li>
-            <li><a href="#">Gift Cards</a></li>
+            <li><a href="/user/homeuser/userPersonalProfile">Gift Cards</a></li>
             <li><a href="#">Help Center</a></li>
             <li class="user_log_out"><a href="/user/homeuser/Logout">Log out</a></li>
         </ul>
