--- a/PPl3/ExtraFiles/assets/css/headerGuest.css
+++ b/PPl3/ExtraFiles/assets/css/headerGuest.css
@@ -172,3 +172,31 @@
     width: 38px;
     height: 35px;
 }
+
+
+.alert_out {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background-color: #fff;
+    box-shadow: 0 0 10px #8f8d8d;
+    border-radius: 10px 0 0 0;
+    border: 1px solid #999;
+    padding: 10px 50px;
+    animation: AlertChange ease-in-out 2s;
+}
+
+    .alert_out.offActive {
+        display: none !important;
+    }
+
+    .alert_out i {
+        padding: 5px;
+        border-radius: 50%;
+        color: red;
+        margin-right: 10px;
+        background-color: darkred;
+    }
