fix lỗi nhỏ ở đặt phòng

--- a/PPl3/Views/Home/Detail.cshtml
+++ b/PPl3/Views/Home/Detail.cshtml
@@ -260,7 +260,7 @@
                                         }
                                     </div>
                                     <div class="col l-12 m-12 c-12 show_all">
-                                        <button>Show all 19 amenities</button>
+                                        <button>Show all @property.property_amenities.ToArray().Length amenities</button>
                                     </div>
                                 </div>
                             </div>
