up lên giao diện của add hotel

--- a/PPl3/Views/Home/profile.cshtml
+++ b/PPl3/Views/Home/profile.cshtml
@@ -86,7 +86,7 @@
                                     @{
                                         if (p_user.user_profile.FirstOrDefault().user_avatar != null)
                                         {
-                                            <div class="avatar" style="background : url(@p_user.user_profile.FirstOrDefault().user_avatar) top center /cover no-repeat">
+                                            <div class="avatar" style="background : url(@p_user.user_profile.FirstOrDefault().user_avatar) top center /cover no-repeat; width: 160px; height:160px">
                                                 <i class="fa-solid fa-shield"></i>
                                             </div>
                                         }
