--- a/PPl3/ExtraFiles/assets/css/hotel.css
+++ b/PPl3/ExtraFiles/assets/css/hotel.css
@@ -576,3 +576,51 @@ html{
     }
 }
 
+/* Code css của page 6 thêm img */
+
+.img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 380px;
+    border: 3px dashed #ccc;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.img button:not(:last-child){
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    background-color: transparent;
+    border: none;
+    color: #ccc;
+    cursor: pointer;
+}
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.remove{
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #000;
+    padding: 10px;
+    font-size: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0 0 5px #ccc;
+    margin: 10px 10px 0 0;
+    cursor: pointer;
+}
+
