--- a/PPl3/ExtraFiles/assets/css/revenue.css
+++ b/PPl3/ExtraFiles/assets/css/revenue.css
@@ -91,6 +91,8 @@ html{
 }
 
 .list_people{
+    display: flex;
+    flex-direction: row;
     width: 100%;
     height: 415px;
     margin-top: 20px;
