getting data from user add hotel section ( not yet)

--- a/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
+++ b/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
@@ -104,7 +104,7 @@
                                         <i class="fa-regular fa-circle-xmark"></i>
                                     </div>
                                     <button class="layout_btn"><i class="fa-solid fa-bars-progress"></i></button>
-                                    <button><a href="/host/homehost/addhotel"><i class="fa-solid fa-plus"></i></a></button>
+                                    <button><a href="/host/homehost/addhotel"><i class="fa-solid fa-plus" style="color:black"></i></a></button>
                                 </div>
                             </div>
                             <div class="list_hotel_1">
