--- a/PPl3/Views/Home/profile.cshtml
+++ b/PPl3/Views/Home/profile.cshtml
@@ -9,7 +9,7 @@
     int pos = 0;
     string tmpBD;
     bool is_host = false;
-    if (p_user.user_type1.ut_name == "host")
+    if (p_user.user_type == 3)
     {
         is_host = true;
     }
