--- a/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
@@ -609,16 +609,38 @@
                                                     </div>
                                                     <div class="infor_basic">
                                                         @{
-                                                            currentDateTime = DateTime.Now.ToString("yyyy");
-                                                            if(property.user.day_become_host != null) {
-                                                                count = int.Parse(currentDateTime) - int.Parse(property.user.day_become_host.Value.ToString("yyyy"));
-                                                            } else {
-                                                                count = 0;
+                                                            count = 0;
+                                                            if (property.user.day_become_host != null)
+                                                            {
+                                                                if (DateTime.Now.ToString("yyyy") != property.user.day_become_host.Value.ToString("yyyy"))
+                                                                {
+
+                                                                    count = int.Parse(DateTime.Now.ToString("yyyy")) - int.Parse(property.user.day_become_host.Value.ToString("yyyy"));
+                                                                    <span>@count</span>
+                                                                    <p>Years hosting</p>
+                                                                }
+                                                                else if (DateTime.Now.ToString("MM") != property.user.day_become_host.Value.ToString("MM"))
+                                                                {
+                                                                    count = int.Parse(DateTime.Now.ToString("MM")) - int.Parse(property.user.day_become_host.Value.ToString("MM"));
+                                                                    <span>@count</span>
+                                                                    <p>Months hosting</p>
+                                                                }
+                                                                else
+                                                                {
+                                                                    count = int.Parse(DateTime.Now.ToString("dd")) - int.Parse(property.user.day_become_host.Value.ToString("dd"));
+                                                                    <span>@count</span>
+                                                                    <p>Days hosting</p>
+                                                                }
+                                                            }
+                                                            else
+                                                            {
+                                                                <span>@count</span>
+                                                                <p>Days hosting</p>
                                                             }
 
+
                                                         }
-                                                        <span>@count</span>
-                                                        <p>Years hosting</p>
+
                                                     </div>
                                                 </div>
                                             </div>
